<resources>
    <string name="app_name">The Kana Quiz</string>
    <string name="selection_title">Question Selection</string>
    <string name="reference_title">Quick Reference</string>
    <string name="options_title">Options</string>
    <string name="about_title">About</string>
    <string name="score_label">Score</string>
    <string name="answer_hint_touch">Answer Here, Then Tap &#8216;Go&#8217;</string>
    <string name="answer_hint_hardware">Answer Here, Then Press &#8216;Enter&#8217;</string>
    <string name="no_questions">No Questions available</string>
    <string name="correct_answer">Correct</string>
    <string name="incorrect_answer">Incorrect</string>
    <string name="request_kana_text_input">Enter the Romaji equivalent</string>
    <string name="request_kana_multiple_choice">Select the Romaji equivalent</string>
    <string name="request_vocab_text_input">Enter the English translation</string>
    <string name="request_vocab_multiple_choice">Select the English translation</string>
    <string name="try_again">Try again</string>
    <string name="show_correct_answer">The correct answer is</string>
    <string name="github_logo">Github Logo</string>
    <string name="twitter_logo">Twitter Logo</string>
    <string name="source_code_on_github">Full source code available on GitHub.</string>
    <string name="copyright_claim">\u00A9 2017&#8211;2018 T Duke Perry. All rights reserved.</string>
    <string name="special_thanks_start">Special Thanks to:</string>
    <string name="special_thanks_1">Sleepy Duck, for the Learn Japanese to Survive series</string>
    <string name="icon_credit_start">Icon built with assistance from:</string>
    <string name="icon_credit_asset_studio"><u>The Android Asset Studio by romannurik</u></string>
    <string name="icon_credit_noto_font"><u>The Google Noto font</u></string>
    <string name="translator_credit"></string>
    <string name="translator_credit_url"></string>
    <string name="firebase_disclosure">Includes Firebase analytics and Crashlytics crash reporting</string>
    <string name="firebase_details">Anonymous data will be transmitted to improve app development</string>
    <string name="acra_disclosure">Includes ACRA crash reporting framework</string>
    <string name="acra_details">In the event of a crash, a report can be instantly sent to the developer via email</string>
    <string name="privacy_policy"><u>Privacy Policy</u></string>
    <string name="no_reference">No Reference Items Available</string>
    <string name="loading">Loading&#8230;</string>
    <string name="no_logs">No Logs Found.</string>
    <string name="log_detail_title">Log Details: %1$tF</string>
    <string name="incorrect_option_title">On an incorrect answer&#8230;</string>
    <string name="incorrect_option_move_on">go to next question</string>
    <string name="incorrect_option_show_answer">show the correct answer</string>
    <string name="incorrect_option_retry">retry question with half points</string>
    <string name="prefid_on_incorrect" translatable="false">action_on_incorrect</string>
    <string name="prefid_on_incorrect_default" translatable="false">move_on</string>
    <string name="prefid_on_incorrect_show_answer" translatable="false">show_answer</string>
    <string name="prefid_on_incorrect_retry" translatable="false">retry</string>
    <string-array name="incorrect_option_item_names">
        <item>@string/incorrect_option_move_on</item>
        <item>@string/incorrect_option_show_answer</item>
        <item>@string/incorrect_option_retry</item>
    </string-array>
    <string-array name="prefids_on_incorrect">
        <item>@string/prefid_on_incorrect_default</item>
        <item>@string/prefid_on_incorrect_show_answer</item>
        <item>@string/prefid_on_incorrect_retry</item>
    </string-array>
    <string name="romanize_system_option_title">Romanization system</string>
    <string name="romanize_system_option_summary">For reference screen, display answer and multiple choice
        features</string>
    <string name="romanize_system_option_default">Default</string>
    <string name="romanize_system_option_hepburn">Revised Hepburn</string>
    <string name="romanize_system_option_nihon" translatable="false">Nihon-shiki</string>
    <string name="romanize_system_option_kunrei" translatable="false">Kunrei-shiki</string>
    <string name="prefid_romanize_system" translatable="false">romanize_system</string>
    <string name="prefid_romanize_system_default" translatable="false">default_system</string>
    <string name="prefid_romanize_system_hepburn" translatable="false">hepburn</string>
    <string name="prefid_romanize_system_nihon" translatable="false">nihon</string>
    <string name="prefid_romanize_system_kunrei" translatable="false">kunrei</string>
    <string-array name="romanize_system_option_item_names">
        <item>@string/romanize_system_option_default</item>
        <item>@string/romanize_system_option_hepburn</item>
        <item>@string/romanize_system_option_nihon</item>
        <item>@string/romanize_system_option_kunrei</item>
    </string-array>
    <string-array name="prefids_romanize_system">
        <item>@string/prefid_romanize_system_default</item>
        <item>@string/prefid_romanize_system_hepburn</item>
        <item>@string/prefid_romanize_system_nihon</item>
        <item>@string/prefid_romanize_system_kunrei</item>
    </string-array>
    <string name="vocab_display_option_title">Preferred Vocabulary Question Format</string>
    <string name="vocab_display_option_summary">Which character set should be used for vocabulary questions</string>
    <string name="vocab_display_option_romaji" translatable="false">Romaji</string>
    <string name="vocab_display_option_kana" translatable="false">Hiragana/Katakana</string>
    <string name="vocab_display_option_kanji" translatable="false">Kanji</string>
    <string name="prefid_vocab_display" translatable="false">vocab_display</string>
    <string name="prefid_vocab_display_romaji" translatable="false">romaji</string>
    <string name="prefid_vocab_display_kana" translatable="false">kana</string>
    <string name="prefid_vocab_display_kanji" translatable="false">kanji</string>
    <string-array name="vocab_display_option_item_names">
        <item>@string/vocab_display_option_romaji</item>
        <item>@string/vocab_display_option_kana</item>
        <item>@string/vocab_display_option_kanji</item>
    </string-array>
    <string-array name="prefids_vocab_display">
        <item>@string/prefid_vocab_display_romaji</item>
        <item>@string/prefid_vocab_display_kana</item>
        <item>@string/prefid_vocab_display_kanji</item>
    </string-array>
    <string name="repetition_option_title">Repetition control</string>
    <string name="repetition_option_summary">Number of consecutive questions with no repeats</string>
    <string name="prefid_repetition" translatable="false">repeat_control</string>
    <string name="digraphs_option_title">Allow Digraphs</string>
    <string name="digraphs_option_summary">Two-part kana will appear in the quiz</string>
    <string name="prefid_digraphs" translatable="false">allow_digraphs</string>
    <string name="diacritics_option_title">Allow Diacritics</string>
    <string name="diacritics_option_summary">Kana with diacritics will appear in the quiz</string>
    <string name="prefid_diacritics" translatable="false">allow_diacritics</string>
    <string name="full_reference_option_title">Display full reference</string>
    <string name="full_reference_option_summary">Reference screen will display everything</string>
    <string name="prefid_full_reference" translatable="false">full_reference</string>
    <string name="multiple_choice_option_title">Multiple Choice Questions</string>
    <string name="multiple_choice_option_summary">Questions will be in multiple choice</string>
    <string name="prefid_multiple_choice" translatable="false">multiple_choice</string>
    <string name="base_form_title">Main</string>
    <string name="diacritics_title">Diacritics</string>
    <string name="digraphs_title">Digraphs</string>
    <string name="kanji_phase_1">Phase One</string>
    <string name="kanji_phase_2">Phase Two</string>
    <string name="kanji_phase_3">Phase Three</string>
    <string name="view_logs">View Logs</string>
    <string name="clear_logs">Clear Logs</string>
    <string name="clipboard_message">Copied to clipboard</string>
    <string name="acra_alert">Unfortunately, The Kana Quiz has crashed. Please send an error report.</string>
    <string name="prefid_ignore_font_provider" translatable="false">ignore_font_provider</string>
    <string name="prefid_font_remind_date" translatable="false">font_remind_date</string>
    <string name="font_provider_install_request">This application uses the RikkaApps\' Font Provider for prettier
        Japanese characters. Please download the support app to enable it.</string>
    <string name="font_provider_update_request">Your version of the RikkaApps\' Font Provider is out of date. You may
        notice some font issues. To resolve, please update to the latest version.</string>
    <string name="prefid_font_download_alert_date" translatable="false">font_download_alert_date</string>
    <string name="font_provider_font_request">Cannot find serif fonts. Please download \‘Noto Serif\’ and \‘Noto
        Serif CJK\’ through the Font Provider app.</string>
    <string name="marshmallow_font_permission_request">The Kana Quiz needs permission to access the fonts from Font Provider.</string>
    <string name="download_font_provider">Get Font Provider for Prettier Fonts</string>
    <string name="prefid_selected_theme" translatable="false">selected_theme</string>
    <string name="selected_theme_title">Themes</string>
    <string name="selected_theme_summary">Choose how you want the quiz to look</string>
    <string name="theme_cherry_blossom_tree">Cherry Blossom Tree</string>
    <string name="theme_shibuya_night">Shibuya Night</string>
    <string name="themeid_cherry_blossom_tree" translatable="false">cherry_blossom_tree</string>
    <string name="themeid_shibuya_night" translatable="false">shibuya_night</string>
    <string name="ljts_kanji_set_15_title">Communication</string>
    <string name="ljts_kanji_set_16_title">Seasons &amp; Weather</string>
    <string name="ljts_kanji_set_17_title">Rural Life</string>
    <string name="ljts_kanji_set_18_title">The Body</string>
    <string name="ljts_kanji_set_19_title">Food &amp; Drink</string>
    <string name="ljts_kanji_set_20_title">Knowledge</string>
    <string name="ljts_kanji_set_21_title">Animals &amp; Water</string>
    <string name="ljts_kanji_set_22_title">Cities &amp; Locations</string>
    <string name="ljts_kanji_set_23_title">Time After Time</string>
    <string name="ljts_kanji_set_24_title">Time of Day</string>
    <string name="ljts_kanji_set_25_title">Family</string>
    <string name="ljts_kanji_set_26_title">Shape &amp; Size</string>
    <string name="ljts_kanji_bonus_set_5_6_title">Honesty, Logic, Calculate, Cut, Active, &amp; Shop</string>
    <string name="ljts_kanji_bonus_set_7_8_title">Buy, Sell, Section, Cliff &amp; Star</string>
    <string name="licence_boilerplate" translatable="false">Copyright 2017&#8211;2018 T Duke Perry\n\nLicensed under
        the Apache License, Version 2.0 (the &quot;License&quot;); you may not use this file except in compliance with
        the License. You may obtain a copy of the License
        at\n\n\u00A0\u00A0\u00A0http://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or
        agreed to in writing, software distributed under the License is distributed on an &quot;AS IS&quot; BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific
        language governing permissions and limitations under the License.</string>
</resources>