<?xml version="1.0" encoding="utf-8"?>
<!--
  ~    Copyright 2019 T Duke Perry
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:key="@string/prefid_on_incorrect"
        android:title="@string/incorrect_option_title"
        android:entries="@array/incorrect_option_item_names"
        android:entryValues="@array/prefids_on_incorrect"
        android:defaultValue="@string/prefid_on_incorrect_default"/>
    <com.noprestige.kanaquiz.options.NumberPreference
        android:key="@string/prefid_repetition"
        android:title="@string/repetition_option_title"
        android:summary="@string/repetition_option_summary"
        android:defaultValue="3"/>
    <CheckBoxPreference
        android:key="@string/prefid_digraphs"
        android:title="@string/digraphs_option_title"
        android:summary="@string/digraphs_option_summary"
        android:defaultValue="false"/>
    <CheckBoxPreference
        android:key="@string/prefid_diacritics"
        android:title="@string/diacritics_option_title"
        android:summary="@string/diacritics_option_summary"
        android:defaultValue="true"/>
    <MultiSelectListPreference
        android:key="@string/prefid_kanji_question_type"
        android:title="@string/kanji_question_type_option_title"
        android:summary="@string/kanji_question_type_option_summary"
        android:entries="@array/kanji_question_type_option_item_names"
        android:entryValues="@array/prefids_kanji_question_type"/>
    <ListPreference
        android:key="@string/prefid_vocab_display"
        android:title="@string/vocab_display_option_title"
        android:summary="@string/vocab_display_option_summary"
        android:entries="@array/vocab_display_option_item_names"
        android:entryValues="@array/prefids_vocab_display"
        android:defaultValue="@string/prefid_vocab_display_kana"/>
    <CheckBoxPreference
        android:key="@string/prefid_full_reference"
        android:title="@string/full_reference_option_title"
        android:summary="@string/full_reference_option_summary"
        android:defaultValue="true"/>
    <CheckBoxPreference
        android:key="@string/prefid_multiple_choice"
        android:title="@string/multiple_choice_option_title"
        android:summary="@string/multiple_choice_option_summary"
        android:defaultValue="true"/>
    <ListPreference
        android:key="@string/prefid_romanize_system"
        android:title="@string/romanize_system_option_title"
        android:summary="@string/romanize_system_option_summary"
        android:entries="@array/romanize_system_option_item_names"
        android:entryValues="@array/prefids_romanize_system"
        android:defaultValue="@string/prefid_romanize_system_default"/>
    <com.noprestige.kanaquiz.themes.ThemeChooser
        android:key="@string/prefid_selected_theme"
        android:title="@string/selected_theme_title"
        android:summary="@string/selected_theme_summary"
        android:defaultValue="@string/themeid_cherry_blossom_tree"/>
    <Preference
        android:key="font_provider_link"
        android:title="@string/download_font_provider"/>
    <Preference
        android:key="clear_logs"
        android:title="@string/clear_logs"/>
</PreferenceScreen>
