<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center_horizontal"
    android:paddingTop="16dp"
    tools:context="com.noprestige.kanaquiz.themes.ThemeChooser">

    <LinearLayout
        android:id="@+id/themeChooserLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.noprestige.kanaquiz.themes.ThemeSelectionItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:themeName="@string/theme_cherry_blossom_tree"
            app:themePrefId="@string/themeid_cherry_blossom_tree"/>

        <com.noprestige.kanaquiz.themes.ThemeSelectionItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:themeName="@string/theme_shibuya_night"
            app:themePrefId="@string/themeid_shibuya_night"/>

    </LinearLayout>
</ScrollView>
