<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.noprestige.kanaquiz.AboutScreen"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lblNameDisplay"
            android:textStyle="normal|bold"
            android:textSize="20sp" />
        <TextView
            android:text=""
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lblVersionDisplay"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:text="@string/licence_boilerplate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lblLicenceDisplay"
        android:layout_marginTop="14dp"
        android:textSize="14sp" />

    <ImageView
        android:contentDescription="@string/github_logo"
        android:layout_width="match_parent"
        app:srcCompat="@drawable/github_logo"
        android:id="@+id/imageView2"
        android:layout_marginTop="10dp"
        android:layout_height="50dp"
        android:onClick="toGithub" />

</LinearLayout>

